--- a/shop/view_iPhone/resource/language/en.lang
+++ b/shop/view_iPhone/resource/language/en.lang
@@ -98,7 +98,7 @@
 <string name="setting_website">Official website</string>
 <string name="setting_tech">Technical support</string>
 <string name="setting_rate">Rating for us</string>
-<string name="setting_geekzoo">About Geek-Zoo</string>
+<string name="setting_support">Language、Date、Edition</string>
 <string name="setting_about">About the APP</string>
 <string name="setting_sales">Sales</string>
 <string name="setting_logout">Sign out</string>
